--- a/ChatShared/ChatShared.csproj
+++ b/ChatShared/ChatShared.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Models\ActiveClients.cs" />
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\ObjectState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
